--- a/src/main/resources/templates/recipe-add-form.html
+++ b/src/main/resources/templates/recipe-add-form.html
@@ -8,7 +8,7 @@
 <div>
   <form th:action="@{/recipe/add}" method="post" th:object="${newRecipe}">
     <input type="number" hidden th:field="*{id}">
-    <input type="number" hidden th:field="${account.getId()}" name="ownerId">
+    <input type="number" hidden th:value="${accountId}" name="ownerId">
     <div style="display:flex; flex-direction: column;">
       <label>Name<input type="text" th:field="*{name}"></label>
       <label>Name<input type="number" th:field="*{portions}"></label>
