--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -16,10 +16,24 @@
 .mainContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     width: 1300px;
+}
+
+.smallBlockContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+
+    background: lightgrey;
+
 }
 
 .listTable {
