--- a/src/main/resources/templates/ingredients-list.html
+++ b/src/main/resources/templates/ingredients-list.html
@@ -24,8 +24,8 @@
             <td><button type="button"><a th:href="@{'/ingredient/delete/'+${ing.getId()}}">-</a> </button></td>
         </tr>
     </table>
-    <div class="smallBlockContainer">
-        <a th:href="@{/ingredient/add}">Add ingredient</a>
+    <div>
+        <a class="clickable wide" th:href="@{/ingredient/add}">Add ingredient</a>
     </div>
 </main>
 </body>
