--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,11 +14,14 @@
     </div>
     <div>
         <label>
-            Password: <input type="text" id="password" name="password">
+            Password: <input type="password" id="password" name="password">
         </label>
     </div>
     <div>
         <button type="submit">Login</button>
+    </div>
+    <div>
+        Don't have an account? <a th:href="@{/register}">Create one now!</a>
     </div>
 </form>
 </body>
