--- a/src/main/resources/templates/register-form.html
+++ b/src/main/resources/templates/register-form.html
@@ -11,9 +11,9 @@
 </header>
 <main class="mainContainer">
   <form class="sendForm" th:action="@{/register}" method="post" th:object="${newUser}">
-    <label><input type="text" th:value="*{username}" name="username"></label>
-    <label><input type="text" th:value="*{password}" name="password"></label>
-    <label><input type="text" th:value="*{confirmPassword}" name="confirmPassword"></label>
+    <label>Username<input type="text" th:value="*{username}" name="username"></label>
+    <label>Password<input type="password" th:value="*{password}" name="password"></label>
+    <label>Confirm password<input type="password" th:value="*{confirmPassword}" name="confirmPassword"></label>
     <button type="submit">Register</button>
   </form>
 </main>
