--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -40,6 +40,7 @@
     align-items: center;
     justify-content: space-around;
     margin: 25px;
+    padding: 10px;
     background-color: #7ecbde;
     border: 2px solid black;
     border-radius: 10px;
